# cmake_study

cmake_study/01_simple_project/: CMakeLists.txt  build.sh  main
cmake_study/02_multi_files/: CMakeLists.txt  my_program
cmake_study/02_multi_files/src/: main.cpp
cmake_study/03_static_link/: CMakeLists.txt
cmake_study/04_add_other_library/: CMakeLists.txt
cmake_study/04_add_other_library/include/: image_processor.h
cmake_study/04_add_other_library/src/: image_processor.cpp  main.cpp
